--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -9,12 +9,13 @@ display:
   quarkus:
     message: development
     pulsar: 
-      url: pulsar://127.0.0.1:57941
+      url: pulsar://127.0.0.1:55001
 
 # prod profile
 quarkus: 
     message: prod
     pulsar: 
-      url: pulsar://127.0.0.1:57941
+      url: pulsar://127.0.0.1:55001
+      pool-size: 5
     http:
       port: 9091
